// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification should add the notification level as class name 1`] = `
<div
  className="
        
        notification
        notification--alert
        qa-notification
      "
>
  <span
    className="notification__content"
  >
    Test message
  </span>
  <button
    className="notification__button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="notification__button--close"
    />
  </button>
</div>
`;

exports[`Notification should be able to render \`a\` elements 1`] = `
<div
  className="
        
        notification
        notification--info
        qa-notification
      "
>
  <span
    className="notification__content"
  >
    <a
      href="http://real-address.com"
    >
      External link
    </a>
  </span>
  <button
    className="notification__button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="notification__button--close"
    />
  </button>
</div>
`;

exports[`Notification should not show the close button for the message level 1`] = `
<div
  className="
        
        notification
        notification--message
        qa-notification
      "
>
  <span
    className="notification__content"
  >
    Test message
  </span>
</div>
`;

exports[`Notification should not show the close button when disabled 1`] = `
<div
  className="
        
        notification
        notification--info
        qa-notification
      "
>
  <span
    className="notification__content"
  >
    Test message
  </span>
</div>
`;

exports[`Notification should render the provided message 1`] = `
<div
  className="
        
        notification
        notification--info
        qa-notification
      "
>
  <span
    className="notification__content"
  >
    Test message
  </span>
  <button
    className="notification__button"
    onClick={[Function]}
    type="button"
  >
    <span
      className="notification__button--close"
    />
  </button>
</div>
`;
